--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://justin.dev",
   "dependencies": {
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
@@ -16,6 +18,8 @@
     "zeppelin-solidity-hot-loader": "1.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
